# Chrono

./: CMakeLists.txt  Chronometer.pro  LICENSE  README.md  app.rc  counter.cpp  counter.h  lapwindow.cpp  lapwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
Ressource/: Chrono.pdn  Chrono3.pdn
